--- a/web/resources/html/taskGrid.html
+++ b/web/resources/html/taskGrid.html
@@ -1,6 +1,5 @@
 
 
-<div data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design: 'headline'"
-     style="width: 100%; height:100%;">
-    <div data-dojo-type="dijit/_WidgetBase" data-dojo-attach-point = "grid"></div>
+<div class="gridx" data-dojo-attach-point = "grid" style="width: 100%; height:100%;">
+
 </div>
