--- a/web/resources/html/taskGrid.html
+++ b/web/resources/html/taskGrid.html
@@ -1,5 +1,5 @@
 
 
-<div class="gridx" data-dojo-attach-point = "grid" style="width: 100%; height:100%;">
+<div data-dojo-attach-point = "grid" style="width: 100%; height:100%;">
 
 </div>
