--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -137,11 +137,9 @@
                 </div>
 
                 <div data-dojo-type="dojox/form/Uploader"
-                     data-dojo-attach-point="uploader"
-                     data-dojo-props='id:"uploader"'></div>
+                     data-dojo-attach-point="uploader"></div>
                 <div data-dojo-type="dojox/form/uploader/FileList"
-                     data-dojo-attach-point="filelist"
-                     data-dojo-props='uploaderId:"uploader"'></div>
+                     data-dojo-attach-point="filelist"></div>
                 <div data-dojo-type="dijit/form/Button" data-dojo-attach-point="button"></div>
 
             </div>
