models class init

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
 
     <style type="text/css">
         @import "vendor/dijit/themes/claro/claro.css";
+        @import "vendor/gridx/resources/claro/Gridx.css";
         @import "vendor/dijit/themes/claro/document.css";
         @import "resources/css/main.css";
     </style>
